# prefill-support-matrix

./: .gitignore  README.md  pyproject.toml
cache/aion-labs--aion-2.0/: aion-labs.json
cache/inception--mercury-2/: inception.json
configs/: models.yaml
prefill_bench/: cli.py  config.py  matrix.py  openrouter_client.py  runner.py
results/: MATRIX.md  results_20260430_214726.json  results_20260430_220205.json  results_20260430_220333.json  results_20260430_221332.json  results_20260430_221346.json  results_20260430_221549.json  results_20260430_222648.json  results_20260430_222836.json  results_20260430_223241.json  results_20260430_223414.json  results_20260430_224025.json  results_20260430_224623.json  results_20260430_224802.json  results_20260430_224947.json  results_20260430_225710.json  results_20260430_225935.json  results_20260430_230203.json  results_20260430_230421.json  results_20260430_230627.json  results_20260430_230720.json  results_20260430_230824.json  results_20260430_230837.json  results_20260430_231010.json  results_20260430_231725.json  results_20260430_232139.json  results_20260430_233410.json  results_20260430_233519.json  results_20260430_233535.json  results_20260430_233911.json  results_20260430_234030.json  results_20260430_234124.json  results_20260430_234720.json  results_20260430_234822.json  results_20260430_234850.json  results_20260501_001531.json  results_20260501_001835.json  results_20260501_001932.json  results_20260501_110133.json  results_20260501_114103.json  (+108 more)
src/: cli.py  config.py  matrix.py  openrouter_client.py  runner.py
(+361 files in other folders)
